--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -106,7 +106,7 @@ jobs:
         mkdir release_path cache_path
         cd ./openwrt
         rm -rf ./bin/targets/x86/64/packages/
-        mv /bin/targets/x86/64/* ../release_path
+        mv ./bin/targets/x86/64/* ../release_path
         make clean
         mv ./build_dir/ ./dl/ ./staging_dir/ -t ../cache_path
         cd ..
