--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -9,11 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      SOURCE_PROJECT: immortalwrt/immortalwrt
-      SOURCE_BRANCH: openwrt-21.02
-      VERSION_TAG: ImmortalWrt 21.02
-
     steps:
     - name: Initialize environment
       env:
@@ -31,8 +26,8 @@ jobs:
     - name: Get source code
       uses: actions/checkout@v3
       with:
-        repository: ${{ env.SOURCE_PROJECT }}
-        ref: ${{ env.SOURCE_BRANCH }}
+        repository: immortalwrt/immortalwrt
+        ref: openwrt-21.02
         path: 'openwrt'
 
     - name: Update & Install feeds
@@ -46,7 +41,7 @@ jobs:
       run: |
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
-        sed -i "s/%D %V %C/$VERSION_TAG @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
+        sed -i "s/%D %V %C/ImmortalWrt 21.02 @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
         mkdir -p ./files/etc/uci-defaults/
         cp ../custom/zju_localize ./files/etc/uci-defaults/
         rm ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
