--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -90,8 +90,11 @@ jobs:
       working-directory: ./openwrt
       run: |
         du -h --max-depth=1
-        echo -e "Using $(($(nproc)+1)) threads to compile..."
+        echo "--------------------"
+        echo "Using $(($(nproc)+1)) threads to compile..."
         make -j $(($(nproc)+1)) download world
+        echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
+        echo "--------------------"
         du -h --max-depth=1
 
     - name: Delete old release
@@ -102,9 +105,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Prepare for release
+    - name: Manage release files
       run: |
-        echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         mkdir release_path
         mv ./openwrt/bin/targets/x86/64/* ./release_path
         mv ./openwrt/dl ./release_path
@@ -126,6 +128,6 @@ jobs:
       with:
         token: ${{ github.token }}
         repository: ${{ github.repository }}
-        retain_days: 5
+        retain_days: 3
         keep_minimum_runs: 1
 
