--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -28,15 +28,23 @@ jobs:
         ref: openwrt-21.02
         path: 'openwrt'
 
-    - name: Update & Install feeds
-      working-directory: ./openwrt
+    - name: Set path
       run: |
+        mkdir -p releases artifacts
+        echo "MAIN_PATH=$PWD" >> $GITHUB_ENV
+        echo "OPENWRT_PATH=$PWD/openwrt" >> $GITHUB_ENV
+        echo "RELEASES_PATH=$PWD/releases" >> $GITHUB_ENV
+        echo "ARTIFACTS_PATH=$PWD/artifacts" >> $GITHUB_ENV
+
+    - name: Update & Install feeds
+      run: |
+        cd $OPENWRT_PATH
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Restore dl files
-      working-directory: ./openwrt
       run: |
+        cd $OPENWRT_PATH
         wget -q https://github.com/$GITHUB_REPOSITORY/releases/download/latest-x64/dl_cache.tar.zst && dlCacheState="exist"
         if [ "$dlCacheState" = "exist" ]; then
           tar --zstd -xf dl_cache.tar.zst && rm -f dl_cache.tar.zst
@@ -44,9 +52,27 @@ jobs:
           echo "dl cache does not exist."
         fi
 
-    - name: Customize
-      working-directory: ./openwrt
+    - name: Restore build cache-1
+      uses: dawidd6/action-download-artifact@v2
+      with:
+        workflow: Build-X64.yml
+        workflow_conclusion: success
+        name: last_build_cache
+
+    - name: Restore build cache-2
       run: |
+        if [ -e Build_cache.tar.zst ]; then
+          tar --zstd -xf Build_cache.tar.zst
+          mv dl build_dir stage_dir -t $OPENWRT_PATH
+          rm -f Build_cache.tar.zst
+          echo "Last build cache restored."
+        else
+          echo "Cache file not found."
+        fi
+
+    - name: Customize
+      run: |
+        cd $OPENWRT_PATH
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
         wget -q https://downloads.immortalwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/packages/Packages.gz
         zgrep -m 1 "Depends: kernel (=.*)$" Packages.gz | sed 's/.*-\(.*\))/\1/' > .vermagic
@@ -55,20 +81,19 @@ jobs:
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt 21.02 @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
         mkdir -p ./files/etc/uci-defaults/
-        cp ../custom/zzz_localize ./files/etc/uci-defaults/
+        cp $MAIN_PATH/custom/zju_localize ./files/etc/uci-defaults/
         rm ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
-        cp ../custom/*.jpg ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
-        cp ../configs/X64_config ./.config
+        cp $MAIN_PATH/custom/*.jpg ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
+        cp $MAIN_PATH/configs/X64_config ./.config
         make defconfig
-        cp ./.config ../configs/new_all_X64_config
-        sh ./scripts/diffconfig.sh > ../configs/new_diff_X64_config
+        cp ./.config $MAIN_PATH/configs/new_all_X64_config
+        sh ./scripts/diffconfig.sh > $MAIN_PATH/configs/new_diff_X64_config
 
     - name: Diff config
       id: diff_config
-      working-directory: ./configs
       run: |
-        if [ "$(diff -q new_all_X64_config all_X64_config)" != "" ]
-        then
+        cd $MAIN_PATH/configs
+        if [ "$(diff -q new_all_X64_config all_X64_config)" != "" ]; then
           echo "::set-output name=state::changed"
           rm -f all_X64_config diff_X64_config
           mv new_all_X64_config all_X64_config
@@ -87,8 +112,8 @@ jobs:
         git push origin main
 
     - name: Build firmware
-      working-directory: ./openwrt
       run: |
+        cd $OPENWRT_PATH
         du -h --max-depth=1
         echo "--------------------"
         echo "Using $(($(nproc)+1)) threads to compile..."
@@ -105,29 +130,40 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Manage release files
+    - name: Manage releases and artifacts
       run: |
-        mkdir release_path
-        mv ./openwrt/bin/targets/x86/64/* ./release_path
-        mv ./openwrt/dl ./release_path
-        rm -rf ./openwrt
-        cd ./release_path
+        mv $OPENWRT_PATH/bin/targets/x86/64/* $RELEASES_PATH
+        cd $RELEASES_PATH
         tar -czf packages.tgz ./packages --remove-files
-        tar --zstd -cf dl_cache.tar.zst ./dl --remove-files
+        cd $OPENWRT_PATH
+        make clean
+        du -h --max-depth=1
+        echo "--------------------"
+        mv $OPENWRT_PATH/dl $OPENWRT_PATH/build_dir $OPENWRT_PATH/stage_dir -t $ARTIFACTS_PATH
+        cd $ARTIFACTS_PATH
+        tar --zstd -cf Build_cache.tar.zst * --remove-files
+        rm -rf $OPENWRT_PATH
 
-    - name: Upload to releases
+    - name: Upload to Releases
       uses: ncipollo/release-action@v1.10.0
       with:
         name: latest x64 firmware
         tag: latest-x64
-        artifacts: release_path/*
+        artifacts: ${{ env.RELEASES_PATH }}/*
         body: ${{ env.RELEASE_BODY }}
+
+    - name: Upload to Artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: last_build_cache
+        path: ${{ env.ARTIFACTS_PATH }}/Build_cache.tar.zst
+        retention-days: 14
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@v2
       with:
         token: ${{ github.token }}
         repository: ${{ github.repository }}
-        retain_days: 3
+        retain_days: 8
         keep_minimum_runs: 1
 
