--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -53,6 +53,7 @@ jobs:
         fi
 
     - name: Restore build cache-1
+      continue-on-error: true
       uses: dawidd6/action-download-artifact@v2
       with:
         workflow: Build-X64.yml
