--- a/.github/workflows/Build-RM2100.yml
+++ b/.github/workflows/Build-RM2100.yml
@@ -34,33 +34,22 @@ jobs:
         echo "MAIN_PATH=$PWD" >> $GITHUB_ENV
         echo "OPENWRT_PATH=$PWD/openwrt" >> $GITHUB_ENV
         echo "RELEASES_PATH=$PWD/releases" >> $GITHUB_ENV
-        echo "ARTIFACTS_PATH=$PWD/artifacts" >> $GITHUB_ENV
-
-    - name: Restore dl cache-1
-      continue-on-error: true
-      uses: dawidd6/action-download-artifact@v2
-      with:
-        workflow: Build-RM2100.yml
-        workflow_conclusion: success
-        name: last_dl_cache
-
-    - name: Restore dl cache-2
-      run: |
-        tree -a -s -L 2
-        if [ -e dl_cache.tar.zst ]; then
-          tar --zstd -xf dl_cache.tar.zst
-          mv dl $OPENWRT_PATH
-          rm -f dl_cache.tar.zst
-          echo "Last dl cache restored."
-        else
-          echo "Cache file not found."
-        fi
 
     - name: Update & Install feeds
       run: |
         cd $OPENWRT_PATH
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+
+    - name: Restore dl files
+      run: |
+        cd $OPENWRT_PATH
+        wget -q https://github.com/$GITHUB_REPOSITORY/releases/download/latest-rm2100/dl_cache.tar.zst && dlCacheState="exist"
+        if [ "$dlCacheState" = "exist" ]; then
+          tar --zstd -xf dl_cache.tar.zst && rm -f dl_cache.tar.zst
+        else
+          echo "dl cache does not exist."
+        fi
 
     - name: Customize
       run: |
@@ -124,12 +113,11 @@ jobs:
     - name: Manage releases and artifacts
       run: |
         mv $OPENWRT_PATH/bin/targets/ramips/mt7621/* $RELEASES_PATH
+        mv $OPENWRT_PATH/dl $RELEASES_PATH
+        rm -rf $OPENWRT_PATH
         cd $RELEASES_PATH
         tar -czf packages.tgz ./packages --remove-files
-        mv $OPENWRT_PATH/dl $ARTIFACTS_PATH
-        cd $ARTIFACTS_PATH
         tar --zstd -cf dl_cache.tar.zst ./dl --remove-files
-        rm -rf $OPENWRT_PATH
 
     - name: Upload to releases
       uses: ncipollo/release-action@v1.10.0
@@ -138,11 +126,4 @@ jobs:
         tag: latest-rm2100
         artifacts: ${{ env.RELEASES_PATH }}/*
         body: ${{ env.RELEASE_BODY }}
-
-    - name: Upload to Artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: last_dl_cache
-        path: ${{ env.ARTIFACTS_PATH }}/dl_cache.tar.zst
-        retention-days: 14
 
