--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -2,7 +2,7 @@ name: Build X86-64
 
 on:
   schedule:
-    - cron: 0 10 * * 4
+    - cron: 0 10 * * 3
   workflow_dispatch:
 
 jobs:
@@ -55,6 +55,7 @@ jobs:
       run: |
         cd $OPENWRT_PATH
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
+        sed -i 's/\${host:-openwrt\.org}/img\.alicdn\.com/g' ./feeds/luci/modules/luci-mod-network/root/etc/uci-defaults/50_luci-mod-admin-full
         wget -q https://downloads.immortalwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/packages/Packages.gz
         zgrep -m 1 "Depends: kernel (=.*)$" Packages.gz | sed 's/.*-\(.*\))/\1/' > .vermagic
         rm -f Packages.gz
