--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -11,8 +11,8 @@ on:
         default: "no"
         type: choice
         options:
-        - yes
-        - no
+        - "yes"
+        - "no"
 
 jobs:
   build:
@@ -71,9 +71,10 @@ jobs:
         sed -i 's/^\(.\).*vermagic$/\1cp $(TOPDIR)\/.vermagic $(LINUX_DIR)\/.vermagic/' ./include/kernel-defaults.mk
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt 21.02 @$BUILD_DATE/g" ./package/base-files/files/etc/openwrt_release
-        mkdir -p ./files/etc/uci-defaults/
         if [ ${{ inputs.zju_localize }}x != "no"x ]; then
+          mkdir -p ./files/etc/uci-defaults/
           cp $MAIN_PATH/custom/zju_localize ./files/etc/uci-defaults/
+          mkdir -p ./files/etc/hotplug.d/iface/
           cp $MAIN_PATH/custom/90-zjudown ./files/etc/hotplug.d/iface/
         fi
         rm ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
